Fix css bug where image is cut off in landscape on mobile

--- a/ifitscool/comingsoon/static/comingsoon/css/comingsoon.css
+++ b/ifitscool/comingsoon/static/comingsoon/css/comingsoon.css
@@ -11,14 +11,14 @@ body {
 
 .container {
   text-align: center;
-  height: 100%;
+  min-height: 100%;
 }
 
 .banner {
   max-width: 850px;
   margin: auto;
   background: rgba(0,0,0,0.5);
-  height: 100%;
+  min-height: 100%;
 }
 
 .main-img {
@@ -49,7 +49,7 @@ body {
 
 .social-media {
   overflow: auto;
-  width: 160px;
+  width: 120px;
   margin: 0 auto;
   padding: 0;
 }
